examples/test/testpolicy2633.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2633
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key22: value46
      key34: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value18
          key19: value19
      podSelector:
        matchLabels:
          key16: value0
          key39: value38
          key35: value39
